--- a/src/index.html
+++ b/src/index.html
@@ -226,8 +226,10 @@
         <span class="loading-text">Loading...</span>
       </div>
 
-      <!-- Floating Controls -->
-      <div class="overlay">
+    </div>
+    
+    <!-- Floating Controls (moved outside viewer to stay fixed) -->
+    <div class="overlay">
         <button id="btn-fit-width" class="tool-btn">
           <i class="ph ph-arrows-out-horizontal"></i>
           <span>Fit Width</span>
@@ -236,7 +238,6 @@
           <i class="ph ph-arrows-out"></i>
           <span>Fit Page</span>
         </button>
-      </div>
     </div>
   </div>
 
