--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,15 @@
             <i class="ph ph-file-zip"></i>
             <span>Compress PDF</span>
           </button>
+          <div class="ocr-btn-container">
+            <button id="btn-ocr" class="tool-btn" tooltip="Extract text from images (OCR)">
+              <i class="ph ph-text-aa"></i>
+              <span>OCR</span>
+            </button>
+            <select id="ocr-language-select" class="ocr-language-select" title="OCR Language">
+              <option value="en">English</option>
+            </select>
+          </div>
           <button id="btn-batch" class="tool-btn" tooltip="Batch processing">
             <i class="ph ph-stack"></i>
             <span>Batch Mode</span>
@@ -710,6 +719,30 @@
       </div>
     </div>
   </div>
+
+  <!-- OCR Progress Dialog -->
+  <div id="ocr-progress-modal" class="modal hidden">
+    <div class="modal-content ocr-progress-content">
+      <div class="modal-header">
+        <h3><i class="ph ph-text-aa"></i> OCR in Progress</h3>
+      </div>
+      <div class="modal-body ocr-progress-body">
+        <div class="ocr-progress-info">
+          <span id="ocr-page-progress" class="ocr-page-progress">Page 0/0</span>
+          <span id="ocr-percentage" class="ocr-percentage">0%</span>
+        </div>
+        <div class="ocr-progress-bar-container">
+          <div id="ocr-progress-bar" class="ocr-progress-bar" style="width: 0%"></div>
+        </div>
+        <p class="ocr-progress-hint">Extracting text from images...</p>
+        <button id="btn-cancel-ocr" class="cancel-ocr-btn">
+          <i class="ph ph-x-circle"></i>
+          <span>Cancel OCR</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
   <!-- Keyboard Help Modal -->
   <div id="keyboard-help-modal" class="modal hidden">
     <div class="modal-content">
